--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "api.py",
-      "use": "@vercel/python3.9"
+      "use": "@vercel/python"
     },
     {
       "src": "static/**",
