--- a/config.yaml
+++ b/config.yaml
@@ -225,46 +225,22 @@ CUSTOM_PROXY_GROUP:
 - name: 📲 电报消息
   type: select
   prior: PROXY
-- name: 📹 油管视频
-  type: select
-  prior: PROXY
 - name: 🎥 奈飞视频
   type: select
   prior: PROXY
-- name: 📺 巴哈姆特
-  type: select
-  prior: PROXY
-- name: 📺 哔哩哔哩
-  type: select
-  prior: DIRECT
 - name: 🌍 国外媒体
   type: select
   prior: PROXY
-- name: 🌏 国内媒体
-  type: select
-  prior: DIRECT
-- name: 📢 谷歌FCM
-  type: select
-  prior: DIRECT
-- name: 📢 谷歌服务
+- name: 📢 谷歌油管
   type: select
   prior: PROXY
-- name: Ⓜ️ 微软Bing
-  type: select
-  prior: PROXY
-- name: Ⓜ️ 微软云盘
+- name: Ⓜ️ OneDrive
   type: select
   prior: DIRECT
 - name: Ⓜ️ 微软服务
   type: select
   prior: DIRECT
-- name: 🍎 苹果服务
-  type: select
-  prior: DIRECT
 - name: 🎮 游戏平台
-  type: select
-  prior: DIRECT
-- name: 🎶 网易音乐
   type: select
   prior: DIRECT
 - name: 🎶 Spotify
@@ -274,9 +250,6 @@ CUSTOM_PROXY_GROUP:
   type: select
   prior: DIRECT
 - name: 🛑 广告拦截
-  type: select
-  prior: REJECT
-- name: 🍃 应用净化
   type: select
   prior: REJECT
 - name: 🛡️ 隐私防护
