--- a/config.yaml
+++ b/config.yaml
@@ -138,7 +138,7 @@ HEAD:
     - +.nflxvideo.net
     - "*.mcdn.bilivideo.cn"
     - +.xboxlive.com
-TEST_URL: https://www.gstatic.com/generate_204
+TEST_URL: http://www.gstatic.com/generate_204
 RULESET:
 - - 🤖 AICHAT
   - https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
