--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ HEAD:
   external-controller: 127.0.0.1:9090
   dns:
     enable: true
+    prefer-h3: true
     listen: 0.0.0.0:1053
     ipv6: true
     enhanced-mode: fake-ip
@@ -188,8 +189,6 @@ RULESET:
   - https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
 - - 🎯 全球直连
   - https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
-- - 🎯 全球直连
-  - https://raw.githubusercontent.com/SubConv/ZJU-Rule/main/Clash/Download.list
 - - 🎯 全球直连
   - '[]GEOIP,CN'
 - - 🐟 漏网之鱼
