--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,8 @@ HEAD:
     ipv6: true
     enhanced-mode: fake-ip
     fake-ip-range: 198.18.0.1/16
+    hosts:
+    - 'geosite:category-ads-all': 127.0.0.1
     default-nameserver:
     - 223.5.5.5
     - 114.114.114.114
@@ -39,10 +41,16 @@ HEAD:
     - https://1.0.0.1/dns-query
     - https://8.8.8.8/dns-query
     fallback-filter:
-      geoip: false
+      geoip: true
       geoip-code: CN
+      geosite:
+        - gfw
       ipcidr:
-      - 240.0.0.0/4
+        - 240.0.0.0/4
+      domain:
+        - '+.google.com'
+        - '+.facebook.com'
+        - '+.youtube.com'
     fake-ip-filter:
     - +.lan
     - +.microsoft*.com
