--- a/config.yaml
+++ b/config.yaml
@@ -18,13 +18,10 @@ HEAD:
     - 1.1.1.1
     - 119.29.29.29
     nameserver-policy:
-      '+.msftconnecttest.com': '223.5.5.5'
-      geosite:gfw,geolocation-!cn:
-      - https://dns.cloudflare.com/dns-query
-      - https://dns.google/dns-query
-      - https://1.1.1.1/dns-query
-      - https://1.0.0.1/dns-query
-      - https://8.8.8.8/dns-query
+      'msftconnecttest.com': [223.5.5.5]
+      '+.msftconnecttest.com': [223.5.5.5]
+      'a.ncepu.edu.cn': [59.67.225.34, 59.67.225.35]
+      'geosite:geolocation-!cn': [tls://8.8.4.4, https://1.0.0.1/dns-query]
     nameserver:
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
